# RhythmLink

./: BOOKING_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  prd_event_management.md  pyproject.toml
accounts/: admin.py  models.py  signals.py
analytics/: models.py
artists/: admin.py  models.py  serializers.py  views.py
backend/: README_PHASE2.md  backend_to_frontend_instruction.txt  db.sqlite3  hello.py  pyproject.toml  setup_manager.py  test_api.py  test_dynamic_pricing.py  test_models.py  test_revenue.py
backend/accounts/: urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/analytics/: admin.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/artists/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/artists/migrations/: 0001_initial.py  0003_split_artist_name.py  0004_rename_artists_art_first_n_72bf1f_idx_artists_art_first_n_c7b023_idx_and_more.py
backend/core/: settings.py  urls.py
backend/customers/: models.py  signals.py  urls.py  views.py
backend/customers/management/commands/: create_tickets.py  import_excel_data_new.py  import_pandas_data.py
backend/customers/migrations/: 0003_faninteraction_alter_booking_options_and_more.py  0004_alter_booking_options_alter_feedback_options_and_more.py
backend/data/: Fan_interactions.xlsx  Fans.xlsx
backend/events/: admin.py  models.py  serializers.py  views.py
backend/pricing/: services.py  urls.py
backend/search/: admin.py  models.py  urls.py  utils.py  views.py
backend/search/migrations/: 0001_initial.py
core/: admin.py  (+1 more)
(+92 files in other folders)
